[project]
name = "mcp-server"
version = "0.1.0"
description = "FastMCP-based server implementing the Model Context Protocol for structured tool and context integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.11.1",
    "fastmcp>=2.14.5",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pinecone>=8.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
